// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`for object: <i>1</i><i>2</i><i>3</i> 1`] = `
<div>
  <i>
    1a
  </i>
  <i>
    2b
  </i>
  <i>
    3c
  </i>
</div>
`;

exports[`for with empty: empty 1`] = `
<div>
  empty
</div>
`;

exports[`for with empty: empty 2`] = `empty`;

exports[`for without empty: <div></div> 1`] = `<div />`;

exports[`for without empty: <div></div> 2`] = `<div />`;

exports[`for without empty: <div><i>1</i><i>2</i><i>3</i></div> 1`] = `
<div>
  <i>
    1
  </i>
  <i>
    2
  </i>
  <i>
    3
  </i>
</div>
`;

exports[`for without empty: <div><i>1</i><i>2</i><i>3</i></div> 2`] = `
<div>
  <i>
    1
  </i>
  <i>
    2
  </i>
  <i>
    3
  </i>
</div>
`;
